# gems

./: .envrc  .fasterer.yml  .gitignore  .gitmodules  .overcommit.yml  .overcommit_gems.rb  .reek.yml  .rspec  .rubocop.yml  CMakeLists.txt  GNUmakefile  GNUmakefile.erb  Gemfile  README.md  Rakefile  TODO  Vagrantfile  add_keys  args.gemspec  blast  buffer.gemspec  cache  command_now  debup  install_fish.sh  makemake  printargs  so.md  sshconf  strip.rb
_sample/good/: mastrofile
_sample/good/mastrorepo/arch_base/: packer.yaml
_sample/good/mastrorepo/arch_updated/: packer.yaml
_sample/mastrorepo/arch_updated/: packer.yaml
_src_00/: bytes.cpp  bytes.h  fcgi.h  fd_source.h  main.cpp  p.h  std_error.cpp  stdx.cpp  unix_socket.h
doc/: Makefile
doc/sphinx/source/: conf.py  index.rst
etc/: version.yaml
exec/: colourtable  tag
lib/: actions.rb  adt.rb  args.rb  buffer.rb  builders.rb  cli.rb  colourtable.rb  config.rb  constants.rb  cyr.rb  funcs.rb  mastoras.rb  queries.rb  ruby_gem.rb  scroll.rb  util.rb  variables.rb  workspace.rb
lib/actions/: packer.rb
lib/args/: version.rb
lib/buffer/: buffer.rb  ops.rb  version.rb
lib/builders/: builder.rb  injector.rb  vagrant.rb
lib/cli/: actions.rb  options.rb  queries.rb
lib/cli/actions/: console.rb  packer.rb  recode.rb
lib/cli/queries/: artifact.rb  build_id.rb  detect_artifact.rb  metadata.rb  packer.rb  source.rb
lib/colourtable/: install.rb
lib/cpp/: deco.rb  name.rb
lib/mastoras/: builder.rb  console.rb  context.rb  ergo.rb  facade.rb  mastroroot.rb  scroll.rb  version.rb  workspace.rb
lib/mastoras/builders/: vagrant.rb
lib/mastoras/util/: f.rb
lib/parse/: filesystem.rb
lib/queries/: artifact.rb
lib/util/: args.rb  class_decorations.rb  deco.rb  lazy_block.rb  module_loader.rb  module_registry.rb  registry.rb  tap.rb  version.rb
notes/: overcommit_defaults.yml
packer/: .gitignore  GNUmakefile  Gemfile  build  build.rb  fromub  mastoras.yaml
packer/chefws/: packer.yaml
packer/chefws/lib/: get_pem_keys.bash
packer/lib/: install  mastrinit.bash  mastrinit.sh  setup.sh  vagrant-packer.yaml
packer/lib/setup.d/: 050-hostname.bash  050-hostname.sh  setup.bash
packer/repo/chef_server/: lib.sum  metadata.yaml.erb  packer.yaml  setup.d.sum  source.yaml.erb
packer/repo/chef_server/lib/: mastrinit.sh
packer/repo/chef_server/setup.d/: 050-hostname.sh  100-chef_organization.bash  100-chef_organization.sh
packer/repo/chefws/: lib.sum  metadata.yaml.erb  packer.yaml  setup.d.sum  source.yaml.erb
packer/repo/chefws/lib/: config.rb  install-chef-server.bash  mastrinit.bash
packer/repo/chefws/setup.d/: 100-install_chef_workstation.bash  100-install_chef_workstation.sh  (+6 more)
packer/repo/ubuntu-18.04/: lib.sum  mastrinit.bash  metadata.yaml.erb  packer.yaml  setup.d.sum  source.yaml.erb
packer/tost/: packer.yaml
spec/: adt_spec.rb  args_spec.rb  buffer_spec.rb  config_spec.cpp  config_spec.h  fcgi_spec.cpp  fcgi_spec.h  mastoras_spec.rb  sock_spec.cpp  sock_spec.h  spec.cpp  spec.h  spec_helper.rb  u_spec.cpp  u_spec.h
spec/config/: parse_spec.cpp  parse_spec.h
spec/fcgi/: record_spec.cpp  record_spec.h
spec/mastoras/: facade_spec.rb  version_spec.rb
spec/mastoras/facade/: initialize_spec.rb
spec/sock/listen/: unix_spec.cpp  unix_spec.h
spec/u/: compose_spec.cpp  compose_spec.h  f_spec.cpp  f_spec.h  make_array_spec.cpp  make_array_spec.h  revar_spec.cpp  revar_spec.h  stdx_spec.cpp  stdx_spec.h  str_spec.cpp  str_spec.h  tmap_spec.cpp  tmap_spec.h  traitlib_spec.cpp  traitlib_spec.h  try__spec.cpp  try_spec.cpp  try_spec.h  view_spec.cpp  view_spec.h
spec/u/stdx/: make_array_spec.cpp  make_array_spec.h
spec/util/: args_spec.rb  class_decorations_spec.rb  deco_spec.rb  lazy_block_spec.rb  tap_spec.rb
src/: adt.cpp  adt.h  buffer.cpp  buffer.h  bytebuf.cpp  bytebuf.h  bytes.h  config.h  error.cpp  error.h  fcgi.cpp  fd_source.cpp  io.cpp  io.h  main.cpp  p.cpp  std_error.h  stdx.h  stream.cpp  stream.h  unix_socket.cpp  unix_socket.h
src/adt/: adt_tag.cpp  adt_tag.h  bytesize.cpp  bytesize.h  types.cpp  types.h
src/app/: Configuration.cpp  Configuration.h
src/config/: config.h  parse.cpp  parse.h
src/fcgi/: record.cpp  record.h  stddefs.h
src/msg/: input.h  input_socket.h  system.h  test_msg.cpp  test_msg.h
src/sock/: common.h  socket.cpp  socket.h
src/sock/listen/: unix.cpp  unix.h
src/u/: bchnk.cpp  bchnk.h  defined.cpp  defined.h  f.cpp  f.h  p.h  revar.cpp  revar.h  stdx.h  str.cpp  str.h  test.cpp  test_u.cpp  test_u.h  tmap.h  traitlib.cpp  traitlib.h  traits.cpp  traits.h  try.cpp  try.h  try_.cpp  try_.h  util.cpp  util.h  view.cpp  view.h
src/u/arr/: make_array.cpp  make_array.h
src/u/f/: compose.h
src/u/stdx/: compiler.cpp  compiler.h  is_detected.cpp  is_detected.h  make_array.h  remove_cvref.cpp  remove_cvref.h
src/util/: arrays.h  find.h  index.h  is_template.cpp  is_template.h  lazy_conditional.cpp  lazy_conditional.h  lib.h  p.h  seri.cpp  seri.h  test.cpp  tuple.h  view.h
tasks/: build_on_docker.sh
(+12 files in other folders)
